<resources>
    <string name="app_name">TechnoFeed</string>
    <string name="title_activity_article">TechnoFeed</string>
    <string name="iv_card_content_description_image">Image of the news response</string>
    <string name="collasping_image">Collapsing Image</string>
    <string name="tv_made_with_love_by">Made with &#9829; by</string>
    <string name="iv_card_my_info">My Photo</string>
    <string name="tv_libraries_used">Libraries Used</string>
    <string name="toolbar_default_text">TechnoFeed</string>
    <string name="title_about_the_app">About the app</string>
    <string name="anand_more">Anand More</string>
    <string name="ritesh_bawale">Ritesh Bawale</string>
    <string name="anan_sethi">Anan Sethi</string>
    <string name="technofeed_logo">TechnoFeed Logo</string>
    <string name="newsapi_tag">News Reader powered by www.newsapi.org</string>
    <string name="material_drawer">Material Drawer</string>
    <string name="mike_penz">Mike Penz</string>
    <string name="retrofit">Retrofit</string>
    <string name="square">Square</string>
    <string name="okhttp">OkHttp</string>
    <string name="glide">Glide</string>
    <string name="bumptech">Bumptech</string>
    <string name="read_the_full_article">Read the full article</string>
    <string name="search_label">Search</string>
    <string name="browse_label">Browse</string>
    <string name="about_label">About</string>
    <string name="disabled_message">Shortcut isn\'t supported</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered for TechnoFeed now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
</resources>