<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_search_black"
        android:shortcutShortLabel="@string/search_label"
        android:shortcutLongLabel="@string/search_label"
        android:shortcutDisabledMessage="@string/disabled_message">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.btech.project.technofeed"
            android:targetClass="com.btech.project.technofeed.view.SearchActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:shortcutId="browse"
        android:enabled="true"
        android:icon="@drawable/ic_whatshot_black"
        android:shortcutShortLabel="@string/browse_label"
        android:shortcutLongLabel="@string/browse_label"
        android:shortcutDisabledMessage="@string/disabled_message">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.btech.project.technofeed"
            android:targetClass="com.btech.project.technofeed.view.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:shortcutId="about"
        android:enabled="true"
        android:icon="@drawable/ic_info_black"
        android:shortcutShortLabel="@string/about_label"
        android:shortcutLongLabel="@string/about_label"
        android:shortcutDisabledMessage="@string/disabled_message">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.btech.project.technofeed"
            android:targetClass="com.btech.project.technofeed.view.AboutActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>